--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "temp-reactjs-template",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "homepage": "https://richard-netto.github.io/example-repo",
   "dependencies": {
@@ -25,15 +25,19 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "rimraf": "^3.0.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "react-scripts build",
+    "build-application": "npm run build",
+    "deploy": "gh-pages -d build",
+    "replace-node-modules": "npx rimraf node_modules && npm i"
   },
   "eslintConfig": {
     "extends": [
@@ -54,9 +58,12 @@
     ]
   },
   "overrides": {
-    "nth-check": "^2.1.1"
+    "nth-check": "^2.1.1",
+    "minimatch": "^3.0.5",
+    "json5": "^2.2.3"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "gh-pages": "^4.0.0"
   }
 }
